# datapipe-framework

./: .gitignore  LICENSE  Makefile  README.md  SETUP.md  install.sh  pyproject.toml  setup.sh  uso_multinube.sh
cloud_implementations/aws/: glue_migrator.py
cloud_implementations/gcp/: dataflow_migrator.py  migrate_clientes.py
cloud_migrator/: main_migrator.py
cloud_migrator/core/: base_migrator.py
cloud_migrator/visual/: processor.py
clouds/aws/dags/: dag_aws_tpp_recarga.py
clouds/aws/extractor/: Dockerfile
clouds/aws/loader/: Dockerfile
clouds/aws/templates/: dag_template.py  redshift_table.sql
clouds/aws/transformer/: Dockerfile
clouds/azure/dags/: dag_azure_tpp_recarga.py
clouds/azure/extractor/: Dockerfile
clouds/azure/loader/: Dockerfile
clouds/azure/templates/: dag_template.py  synapse_table.sql
clouds/azure/transformer/: Dockerfile
clouds/gcp/extractor/: Dockerfile
clouds/gcp/loader/: Dockerfile
clouds/gcp/transformer/: Dockerfile
config/: tpp_recarga.json
docker/base/: Dockerfile
docker/extractor/: Dockerfile
docker/extractor/src/: extractor.py
docker/loader/: Dockerfile
docker/loader/src/: loader.py
docs/: GUIA_ARQUITECTURA.md  MANUAL_OPERATIVO.md  POETRY_VS_PIP.md  PRESENTACION_EJECUTIVA.md  avro-schemas.md  environments-and-commands.md  getting-started.md  multi-cloud.md  workflow-guide.md
generators/cookiecutter-datapipe/: cookiecutter.json
generators/dag-generator/: Dockerfile  pyproject.toml
generators/procedure-generator/: Dockerfile  pyproject.toml
generators/schema-generator/: Dockerfile  pyproject.toml  requirements.txt  schema_generator.py
generators/schema-generator/src/: schema_generator.py
generators/table-generator/: Dockerfile  LICENSE  pyproject.toml
generators/table-generator/src/: table_generator.py
oracle/: .sql  tpp_recarga.sql
scripts/: make_table.py
sql/create_table/: dep_tpp_recarga.sql  stg_tpp_recarga.sql
src/datapipe/: cli.py
template/: tables_to_process.py
templates/aws/: cookiecutter.json
templates/azure/: cookiecutter.json
templates/dags/: oracle_to_aws.py.j2  oracle_to_azure.py.j2  oracle_to_gcp.py.j2
templates/gcp/: cookiecutter.json
templates/project/: config.yaml
templates/visual/: table_config.yaml
tpp_recarga/: Makefile
tpp_recarga/dags/: dag_tpp_recarga.py
(+19 files in other folders)
