[tool.poetry]
name = "cloud-migrator"
version = "1.0.0"
description = "Herramienta para migrar tablas Oracle a GCP/AWS/Azure"
authors = ["Tu equipo"]

[tool.poetry.dependencies]
python = "^3.9"
cx-oracle = "^8.3.0"
google-cloud-bigquery = "^3.0.0"
boto3 = "^1.26.0"
azure-identity = "^1.12.0"
azure-synapse = "^0.1.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
migrate-table = "cloud_migrator.main_migrator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
